resources/route_central.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: central
  namespace: company-rhacs
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: central-tls
    weight: 100
  wildcardPolicy: None
